--- a/frontend/package.json
+++ b/frontend/package.json
@@ -78,6 +78,7 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^3.1.10",
+    "webpack-dev-middleware": "^1.12.2",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
